Collections are uploaded with arc Fixes #62, Fixes #63, Fixes #64
